Extract DB transactor to a new namespace